# templates

./: README.md  package-lock.json  package.json  replace-placeholders.awk
cpp-android-native-activity-empty/: .gitignore  README.md
cpp-android-native-activity-empty/app/src/main/cpp/: main.cpp
cpp-gui-qt5-qml/: .gitignore  CMakeLists.txt
cpp-gui-qt5-qml/qml/: main.qml
cpp-gui-qt5-qml/src/: counter.cpp  counter.hpp  main.cpp
cpp-gui-qt5-qml/ts/: hello-qt-qml_en.ts  hello-qt-qml_es.ts  translations.qrc
fsharp-console/: README.md
haskell-console/: README.md  haskell-console.cabal  package.yaml  stack.yaml
haskell-console/src/: Main.hs
haskell-gui-webviewhs/: package.yaml  stack.yaml
haskell-gui-webviewhs/src/: Main.hs  Main.html
haxe/: README.md  build.hxml
haxe/src/: Main.hx
java/: .classpath
java-android-jni/: .gitignore  README.md
java-android-jni/app/src/main/: AndroidManifest.xml
java-android-jni/app/src/main/cpp/: CMakeLists.txt  hello-jni.c
java-android-jni/app/src/main/java/io/rainbyte/example/hellojni/: HelloJni.java
java-android-jni/app/src/main/res/layout/: activity_hello_jni.xml
java-android-webview/: build.gradle  settings.gradle
java-android-webview-svelte/: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
java-android-webview-svelte/app/: build.gradle
java-android-webview-svelte/app/src/main/: AndroidManifest.xml
java-android-webview-svelte/app/src/main/assets/: index.html
java-android-webview-svelte/app/src/web/: main.js
java-android-webview/app/src/main/assets/: index.html
java-android-webview/app/src/main/java/io/github/rainbyte/hellojava/: MainActivity.java
java-android-webview/app/src/main/res/layout/: activity_main.xml
java-android-webview/app/src/test/java/io/github/rainbyte/hellojava/: ExampleUnitTest.java
java-android-webview/gradle/wrapper/: gradle-wrapper.properties
java-android/app/src/main/java/io/github/rainbyte/hellojava/: MainActivity.java
java-android/app/src/main/res/layout/: activity_main.xml
java-console/: README.md
java-console/src/example/: Main.java
javascript-android-cordova/: .gitignore  package-lock.json  package.json
javascript-android-cordova/hooks/: README.md
javascript-android-cordova/www/: index.html
javascript-android-cordova/www/css/: index.css
javascript-web-svelte/: README.md  package-lock.json  package.json  webpack.config.js
javascript-web-svelte/src/: main.svelte
kotlin/: README.md
kotlin-android/app/: build.gradle
kotlin-android/app/src/main/: AndroidManifest.xml
kotlin-android/app/src/main/java/io/github/rainbyte/hellokotlin/: MainActivity.kt
kotlin-console/: build.gradle.kts
kotlin-console/src/io/github/rainbyte/: Foo.java  Main.kt
purescript-console/: README.md
purescript/src/: Main.purs
racket/: README.md
racket-console/src/: main.rkt
rust/: README.md
rust-console/: Cargo.toml
rust-gui-glow/: Cargo.toml  README.md
rust-gui-glow/src/: main.rs
rust-gui-glow/static/: index.html
src/: foo.rkt
typescript/: README.md  package.json
typescript-console/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
typescript-vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
typescript-vscode-extension/src/: extension.ts
(+1 files in other folders)
