name:                haskell-console
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rainbyte/<project>#readme
license:             BSD3
license-file:        LICENSE
author:              Alvaro F. García
maintainer:          alvarofernandogarcia@gmail.com
copyright:           2019 Alvaro F. García
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-console
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
